--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <div id="root"></div>
   <div id="math"></div>
   <div id="data"></div>
+  <div id="data1"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
